deploy/k8s/overlays/local/patch-api-init.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  template:
    spec:
