deploy/k8s/overlays/local/patch-api-recreate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  strategy:
    type: Recreate
